# rust_rest_example

./: Cargo.toml
day1_1_immutability_and_refs/src/: main.rs
day1_1_numbers/src/: main.rs
day1_1_strings/src/: main.rs
day1_2_struct_declare/src/: main.rs
step_final/: Cargo.toml  README.md
step_final/sql/: example.sql
step_final/src/: main.rs  model.rs  service.rs
