[package]
name = "rest_final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# add this library,and cargo install

# bson (required)
serde = { version = "1.0.157", features = ["derive"] }
rbson = "2.0.5"
serde_json = "1.0.94"

# logging lib(required)
log = "0.4.17"
fast_log="1.5.54"

#async runtime lib
tokio = { version = "1.26.0", features = ["full"] }

#db drivers
postgres = "0.19.4"
tokio-postgres = "0.7.7"
# db schema sql
refinery = {version = "0.8.7", features = ["tokio-postgres"]}

# rbatis (required) default is all-database+runtime-async-std-rustls
rbatis =  { version = "3.1.16" }

actix-web = "4.3.1"

